Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
A few kernel implementation files define enable_if helpers that shadow existing ones, which can cause strange errors in unity builds. For example: scalar_arithmetic.cc defines enable_if_floating_point for the C types float/double which conflicts with the one defined in type_traits.h for the Arrow types.
Attachments
Issue Links
- links to