ARROW-14475: [C++] Don't shadow enable_if helpers